Fri Oct  1 10:51:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE_TAO.mwc:
          Removed projects we don't use in DAnCE

Wed Sep 29 18:37:07 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dance/LocalityManager/Daemon/Locality_Manager.mpc:
        * tools/Config_Handlers/Config_Handlers.mpc:
        * tools/Config_Handlers/DynAny_Handler/DynAny_Handler.mpc:
        * tools/Config_Handlers/Package_Handlers/Package_Handlers.mpc:
        * tools/Split_Plan/Split_Plan.mpc:
        * tools/System_Health/Daemon/SHS_Daemon.mpc:
        * tools/System_Health/System_Health.mpc:

          "make install" fixes.

Mon Sep 27 19:20:48 UTC 2010  William Otte  <wotte@zifnab>

        * DANCE_TAO.mwc

          Fixed for the restructuring.

Mon Sep 27 09:40:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dance/LocalityManager/Handler/DAnCE_Locality_Handler_export.h:
        * dance/LocalityManager/Interceptors/DAnCE_Error_Interceptors_export.h:
        * tools/Convert_Plan/DAnCE_Convert_Plan_export.h:
        * tools/Split_Plan/DAnCE_Split_Plan_export.h:
        * tools/System_Health/Interceptors/DAnCE_SHS_CORBA_Transport_export.h:
        * tools/System_Health/Interceptors/DAnCE_SHS_Interceptors_export.h:
          Removed generated by line

Fri Sep 24 14:49:57 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/DAnCE_Properties.mpc:
        * dance/Deployment/Deployment_Core.mpc:
        * dance/DomainApplication/DomainApplication.mpc:
        * dance/DomainApplicationManager/DomainApplicationManager.mpc:
        * dance/LocalityManager/Daemon/Locality_Manager.mpc:
        * dance/LocalityManager/Handler/LocalityHandler.mpc:
        * dance/LocalityManager/Scheduler/Scheduler.mpc:
        * dance/Logger/Logger.mpc:
        * dance/NodeApplication/NodeApplication.mpc:
        * dance/NodeApplicationManager/NodeApplicationManager.mpc:
        * dance/RepositoryManager/RepositoryManager.mpc:
