@@ -1,0 +1,110 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> <!-- $Id$  --><html xmlns="http://www.w3.org/1999/xhtml"><head>
+    <title>Building and Installing DAnCE </title>
+    <LINK rev="made" href="mailto:schmidt@cs.wustl.edu"></head>
+  <body text="#000000" vLink="#ff0f0f" link="#000fff" bgColor="#ffffff">
+    <hr>
+    <h3>Building and Installing DAnCE</h3>
+    <p>The first thing you should do to install DAnCE is to set the environment 
+      variable <code>DAnCE_ROOT</code> to
+      be <code>$TAO_ROOT/DAnCE</code>, or whereever you have installed
+      the DAnCE sources. Please refer 
+      to the <A href="../../ACE-INSTALL.html">ACE installation notes</A> and <A href="../TAO-INSTALL.html">
+        TAO installation notes</A> for instructions on setting <code>$ACE_ROOT</code> 
+      and <code>$TAO_ROOT</code>, respectively. They are needed since DAnCE sits on 
+      top of ACE+TAO. Compiling ACE+TAO successfully is the <strong>first</strong> requirement 
+      for compiling DAnCE.
+    </p>
+    <hr>
+    <h3>Supported Platforms for DAnCE</h3>
+    <p>CIAO should be usable on most platforms that TAO runs on. Please see <A href="../TAO-INSTALL.html">
+        TAO's installation</A> pages for details
+    </p>
+    <p>If you have <A href="../../docs/ACE-porting.html">porting questions</A> or 
+      have a problem compiling DAnCE with TAO and ACE on the platforms shown above 
+      please send email to either <A href="news:comp.soft-sys.ace">ACE Newsgroup</A> or 
+      the <A href="mailto:ciao-users@list.isis.vanderbilt.edu">CIAO mailing list</A> and we'll
+      try to help you fix the problems. You can also submit bug reports and 
+      enhancement requests in our <A href="../../docs/usage-bugzilla.html">bug tracking 
+        system</A>.
+    </p>
+    <p>DAnCE can be obtained <a href="http://www.dre.vanderbilt.edu/Download.html">electronically</a>
+      via the WWW and ftp. <a href="http://www.dre.vanderbilt.edu/DAnCE">DAnCE</a> is 
+      bundled with the ACE and TAO release. You'll always need the most recent 
+      version of ACE and TAO because DAnCE tracks changes to ACE and TAO very closely.
+    </p>
+    <hr>
+    <h3>Obtaining and Installing Xerces-C</h3>
+    <p>The Xerces-C XML parsing library is a necessary component to build parts of 
+      DAnCE that need to process XML based descriptor files, which include the <b>Plan 
+        Launcher</b> and the <b>Repository Manager</b>. Currently, the only Xerces-C 
+      versions supported by the DOC group is version 2.6 or later or 3.0 or later.
+      Earlier versions of the Xerces-C library may work.
+    </p>
+    <h4>Building Xerces-C</h4>
+    <p>You 
+      will have to obtain the source from the <a href="http://xml.apache.org/xerces-c/download.cgi">
+        Xerces-C webpage</a> and build it. Building Xerces-C is fairly 
+      straightfoward. Please see the documentation available <a href="http://xerces.apache.org/xerces-c/build-3.html">
+        here</a> for instructions particular to your platform.
+    </p>
+    <ul>
+      <li>
+        <strong>NOTE</strong>: Some of the provided projects with Xerces-C attach 
+      inconsistant library decorators onto the end of the Xerces-C libraries. The MPC 
+      build tool will expect these libraries to be named xerces-c for non debug 
+      versions, and xerces-cd for debug versions.
+    </ul>
+    <h4>Xerces-C Environment Settings</h4>
+    <p>If the Xerces includes and libraries are in your system include and library 
+      paths, respectively, then you need not set up any environment and may proceed 
+      to the next step. If not, you will need to set an environment variable named 
+      XERCESCROOT to a path such that $XERCESCROOT/include points to the includes and 
+      $XERCESCROOT/lib points to the libraries. Also make sure that $XERCESCROOT/lib 
+      is in the appropriate environment variable that your platform uses to search 
+      for dynamically linked libraries.
+    </p>
+    <hr>
+    <p>To build DAnCE core/tools/examples:
+    </p>
+    <ol>
+      <li>
+      Make sure ACE and TAO are built.
+      <li>
+      Make sure you have the Xerces-C libraries installed/built
+      <li>
+      Enable Xerces-C in default.features by setting <code>xerces3=1</code> or 
+      <code>xerces2=1</code>, depending on your version Xerces-C libraries.
+      <li>
+        Make sure all ACE/TAO/etc. generated libs are in <code>$ACE_ROOT/lib</code>. To 
+        build DAnCE you will need:
+        <ul>
+          <li>
+            <code>ACE</code>
+          <li>
+            <code>TAO</code>
+          <li>
+            <code>TAO_IDL</code>
+          <li>
+            <code>IORTable</code>
+        </ul>
+      <li>
+        Generate the Makefile/Solution/Project files and build
+        <p>For the supported build tools please see <a href="../../MPC/docs/html/MakeProjectCreator.html">
+            MPC manual</a>.
+        </p>
+        <p>On <strong>Linux</strong>: do <code>$ACE_ROOT/bin/mwc.pl -type gnuace DAnCE_TAO.mwc</code> in $DANCE_ROOT
+        </p>
+        <p>On <strong>Windows/VC8</strong>: do <code>%ACE_ROOT%/bin/mwc.pl -type vc8</code>
+          at the locations specified above then Open the solution file and build.
+        </p>
+        <p><strong>Note:</strong> You can run <code>mwc.pl</code> at <code>DANCE_ROOT.</code>
+          After running the command 
+          with proper augment once then you 
+          can do <code>make</code> at <code>$DANCE_ROOT</code> (Linux) or open the 
+          workspace/solution file at <code>$DANCE_ROOT</code> (Windows) to build.
+        </p>
+      </li>
+    </ol>
+  </body>
+</html>
