@@ -1,3 +1,8 @@
+Fri Oct  1 14:29:46 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE-INSTALL.html:
+          DAnCE install instructions.
+
 Fri Oct  1 10:51:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * DAnCE_TAO.mwc:
